--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "node ./server/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "body-parser": "^1.19.0",
     "core-js": "^3.4.4",
+    "ejs": "^3.0.1",
+    "element-ui": "^2.13.0",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0",
+    "octonode": "^0.9.5",
+    "qs": "^6.9.1",
+    "request": "^2.88.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
@@ -24,6 +34,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
