--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-project",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,12 +12,16 @@
   "dependencies": {
     "axios": "^0.19.1",
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
+    "commander": "^4.1.0",
     "core-js": "^3.4.4",
     "ejs": "^3.0.1",
     "element-ui": "^2.13.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "lowdb": "^1.0.0",
     "octonode": "^0.9.5",
+    "open": "^7.0.0",
     "qs": "^6.9.1",
     "request": "^2.88.0",
     "vue": "^2.6.10",
@@ -40,5 +44,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "bin": {
+    "fe": "./bin/fe.js"
   }
 }
